--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,18 @@ apply plugin: 'java'
 version = '0.1.0'
 sourceCompatibility = '1.8'
 
+//create a single Jar with all dependencies
+task fatJar(type: Jar) {
+    manifest {
+        attributes 'Implementation-Title': 'JSRenamer',
+                'Implementation-Version': version,
+                'Main-Class': 'com.lars_albrecht.java.jsrenamer.JSRenamerMain'
+    }
+    baseName = project.name + '-all'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
+
 jar {
     manifest {
         attributes 'Main-Class': 'com.lars_albrecht.java.jsrenamer.JSRenamerMain'
